// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button component with icon matches snapshot 1`] = `
<Styled(button)
  onClick={[Function]}
  padded={true}
  type="button"
>
  Click Me
  <Icon
    icon="image.jpg"
    padded={true}
  />
</Styled(button)>
`;

exports[`Button component matches snapshot 1`] = `
<Styled(button)
  onClick={[Function]}
  padded={false}
  type="button"
>
  Click Me
</Styled(button)>
`;
